--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,42 +1,40 @@
-name: Java CI Workflow
+name: Java CI/CD Workflow
 
-# 触发条件：每当代码推送到 main 分支或发起 pull request 时触发工作流
+# 触发条件：在推送到 main 或 master 分支时触发
 on:
   push:
     branches:
       - main
+      - master
   pull_request:
     branches:
       - main
+      - master
 
 jobs:
   build:
     runs-on: ubuntu-latest
 
     steps:
-      # 检出代码
+      # Step 1: 检出代码
       - name: Checkout code
         uses: actions/checkout@v2
 
-      # 设置 JDK 17 环境
+      # Step 2: 设置 JDK 17
       - name: Set up JDK 17
         uses: actions/setup-java@v1
         with:
           java-version: '17'
 
-      # 使用 Maven 构建项目
+      # Step 3: 使用 Maven 构建项目
       - name: Build with Maven
         run: mvn clean install
 
-      # 运行单元测试
-      - name: Run tests
-        run: mvn test
-
-      # 运行 PMD 静态代码分析
+      # Step 4: 运行 PMD 进行代码质量检查
       - name: Run PMD
         run: mvn pmd:check
 
-      # 上传 PMD 生成的代码质量报告为构建工件
+      # Step 5: 上传 PMD 报告作为工件
       - name: Upload PMD report
         uses: actions/upload-artifact@v2
         with:
@@ -47,18 +45,18 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      # 检出代码
+      # Step 1: 检出代码
       - name: Checkout code
         uses: actions/checkout@v2
 
-      # 使用 Docker 构建镜像
+      # Step 2: 构建 Docker 镜像
       - name: Build Docker image
-        run: docker build -t limingyi41/texteditor3:latest .
+        run: docker build -t limingyi41/texteditor:latest .
 
-      # 登录 Docker Hub
+      # Step 3: 登录 Docker Hub
       - name: Login to Docker Hub
-        run: echo "${{ secrets.!Lmy200434 }}" | docker login -u "${{limingyi41}}" --password-stdin
+        run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
 
-      # 推送 Docker 镜像到 Docker Hub
+      # Step 4: 推送 Docker 镜像到 Docker Hub
       - name: Push Docker image
-        run: docker push limingyi41/texteditor3:latest
+        run: docker push limingyi41/texteditor:latest
