--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -1,47 +1,62 @@
-name: CI/CD Pipeline
+name: Java CI/CD Workflow
 
-# 触发条件：每次推送代码或拉取请求时执行
+# 触发条件：在推送到 main 或 master 分支时触发
 on:
   push:
     branches:
       - main
+      - master
   pull_request:
     branches:
       - main
+      - master
 
 jobs:
   build:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v2
+      # Step 1: 检出代码
+      - name: Checkout code
+        uses: actions/checkout@v2
 
-    - name: Set up JDK 17
-      uses: actions/setup-java@v1
-      with:
-        java-version: '17'
+      # Step 2: 设置 JDK 17
+      - name: Set up JDK 17
+        uses: actions/setup-java@v1
+        with:
+          java-version: '17'
 
-    - name: Build with Maven
-      run: mvn clean install
+      # Step 3: 使用 Maven 构建项目
+      - name: Build with Maven
+        run: mvn clean install
 
-    - name: Run tests
-      run: mvn test
+      # Step 4: 运行 PMD 进行代码质量检查
+      - name: Run PMD
+        run: mvn pmd:check
 
-    - name: Package application
-      run: mvn package
+      # Step 5: 上传 PMD 报告作为工件
+      - name: Upload PMD report
+        uses: actions/upload-artifact@v2
+        with:
+          name: pmd-report
+          path: target/site/pmd.html
 
-  # 部署到 Docker
-  deploy:
+  docker:
     runs-on: ubuntu-latest
-    needs: build
 
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v2
+      # Step 1: 检出代码
+      - name: Checkout code
+        uses: actions/checkout@v2
 
-    - name: Build and Push Docker Image
-      run: |
-        docker build -t your-dockerhub-username/texteditor:latest .
-        echo "${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}" | docker login -u "${{ secrets.DOCKER_HUB_USERNAME }}" --password-stdin
-        docker push your-dockerhub-username/texteditor:latest
+      # Step 2: 构建 Docker 镜像
+      - name: Build Docker image
+        run: docker build -t limingyi41/texteditor:latest .
+
+      # Step 3: 登录 Docker Hub
+      - name: Login to Docker Hub
+        run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
+
+      # Step 4: 推送 Docker 镜像到 Docker Hub
+      - name: Push Docker image
+        run: docker push limingyi41/texteditor:latest
