--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -34,9 +34,9 @@ jobs:
       - name: Run PMD
         run: mvn pmd:check
 
-      # Step 5: 上传 PMD 报告作为工件
+      # Step 5: 上传 PMD 报告，使用 `actions/upload-artifact@v3`
       - name: Upload PMD report
-        uses: actions/upload-artifact@v2
+        uses: actions/upload-artifact@v3
         with:
           name: pmd-report
           path: target/site/pmd.html
