--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -58,5 +58,5 @@ jobs:
         run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
 
       # Step 4: 推送 Docker 镜像到 Docker Hub
-      - name: Push Docker image
-        run: docker push limingyi41/texteditor:latest
+      - name: Build Docker image
+        run: docker build -t limingyi41/texteditor:latest ./text\ editor
