--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -59,4 +59,5 @@ jobs:
 
       # Step 4: 推送 Docker 镜像到 Docker Hub
       - name: Build Docker image
-        run: docker build -t limingyi41/texteditor:latest .
+        run: docker build -t limingyi41/texteditor:latest ./text\ editor
+
