--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,12 +4,12 @@ name: Java CI/CD Workflow
 on:
   push:
     branches:
-      - main
-      - master
+      - version2.0
+      - version3.0
   pull_request:
     branches:
-      - main
-      - master
+      - version2.0
+      - version3.0
 
 jobs:
   build:
@@ -51,7 +51,7 @@ jobs:
 
       # Step 2: 构建 Docker 镜像
       - name: Build Docker image
-        run: docker build -t limingyi41/texteditor:latest .
+        run: docker build -t limingyi41/texteditor3:latest .
 
       # Step 3: 登录 Docker Hub
       - name: Login to Docker Hub
@@ -59,4 +59,4 @@ jobs:
 
       # Step 4: 推送 Docker 镜像到 Docker Hub
       - name: Build Docker image
-        run: docker build -t limingyi41/texteditor:latest .
+        run: docker build -t limingyi41/texteditor3:latest .
