--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,6 +1,6 @@
 name: Java CI/CD Workflow
 
-# 触发条件：在推送到 main 或 master 分支时触发
+# 触发条件：在推送到 version2.0 或 version3.0 分支时触发
 on:
   push:
     branches:
@@ -58,10 +58,5 @@ jobs:
         run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
 
       # Step 4: 推送 Docker 镜像到 Docker Hub
-      - name: Build Docker image
-<<<<<<< HEAD
-        run: docker build -t limingyi41/texteditor3:latest .
-=======
-        run: docker build -t limingyi41/texteditor:latest ./text\ editor
-
->>>>>>> 0e94f52c02987879d6a8d74446e639aece87b8f3
+      - name: Push Docker image
+        run: docker push limingyi41/texteditor3:latest
